--- a/index.html
+++ b/index.html
@@ -1,11 +1,127 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Gitub Pages Demo</title>
-  <link rel="stylesheet" type="css/text" href="/style.css" media="screen">
+  <title>Darron Biles Resume</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/css/main.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+    crossorigin="anonymous">
 </head>
+
+<!-- Nav Bar -->
+<nav class="navbar sticky-top">
+  <div class="container-fluid navigation">
+
+    <!-- Brand Statement -->
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Darron Biles</a>
+    </div>
+
+    <!-- Navigation Links with Font Awesome Icons-->
+    <a href="#"><i class="fas fa-home"></i> Home</a>
+    <a href="#"><i class="fas fa-code"></i> Skills</a>
+    <a href="#"><i class="fas fa-box-open"></i> Portfolio</a>
+    <a href="#"><i class="fa fa-envelope"></i> Contact</a>
+
+  </div>
+</nav>
+
+<!-- Body Section -->
+
 <body>
-  <h1 id="header">Hello World</h1>
+
+  <!-- Jumbotron -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="jumbotron col-12">
+        <h1 class="display-3 section-header">Darron Biles</h1>
+        <p class="lead section-emphasis">Programmer | Embedded Tester | Full Stack Engineer</p>
+        <iframe src="https://ghbtns.com/github-btn.html?user=dbiles&type=follow&count=true&size=large" frameborder="0"
+          scrolling="0" width="220px" height="30px" style="text-align: center"></iframe>
+        <hr class="my-2">
+        <p><span class="property"></span>let</span> darronBiles = <span class="bracket">{</span> </p>
+        <p><span class="property">criticalThinker:</span> true,</p>
+        <p><span class="property">tenacious:</span> true,</p>
+        <p><span class="property">teamPlayer:</span> true,</p>
+        <p><span class="bracket">}</span></p>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Portfolio -->
+  <div class='container-fluid'>
+    <div class="row pb-4">
+      <div id="carouselId" class="carousel slide col-8" data-ride="carousel">
+        <h2><i class="fas fa-box-open"></i> Portfolio</h2>
+        <ol class="carousel-indicators">
+          <li data-target="#carouselId" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselId" data-slide-to="1"></li>
+          <li data-target="#carouselId" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+          <div class="carousel-item active">
+            <a href="https://dbiles.github.io/crystal-collector/" target="_blank"><img src="./assets/images/crytsal-collector.PNG"
+                alt="First slide"></a>
+          </div>
+          <div class="carousel-item">
+            <a href="https://dbiles.github.io/trivia-game/" target="_blank"><img src="./assets/images/trivia_game.png"
+                alt="First slide"></a>
+          </div>
+          <div class="carousel-item">
+            <a href="https://dbiles.github.io/giftastic/" target="_blank"><img src="./assets/images/giphyapi.png" alt="First slide"></a>
+          </div>
+          <small><i>Click to vist the project </i></small>
+        </div>
+        <a class="carousel-control-prev" href="#carouselId" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselId" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Contact -->
+  <div class="container-fluid">
+    <div class="row">
+      <form class="form col-8">
+        <h2><i class="fa fa-envelope"></i> Contact</h2>
+        <div class="form-group">
+          <label for="email">Email Address</label>
+          <input type="email" class="form-control shadow" id="email-contact" aria-describedby="email-help" placeholder="handle@domain.com">
+        </div>
+        <div class="form-group">
+          <label for="subject">Subject</label>
+          <input type="text" class="form-control shadow" id="email-subject" aria-describedby="subject" placeholder="Subject of email">
+        </div>
+        <div class="form-group">
+          <label for="message">Message</label>
+          <textarea class="form-control shadow" id="email-message" rows="3" placeholder="Leave a message..."></textarea>
+        </div>
+        <button type="button" class="btn btn-sm shadow" role="button" aria-pressed="true">Send Message</button>
+      </form>
+    </div>
+  </div>
 </body>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+  crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
+  crossorigin="anonymous"></script>
+
 </html>
