Update: new project added to carousel

--- a/index.html
+++ b/index.html
@@ -68,15 +68,16 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <div class="carousel-item active">
-            <a href="https://dbiles.github.io/crystal-collector/" target="_blank"><img src="./assets/images/crytsal-collector.PNG"
-                alt="First slide"></a>
+            <a href="https://dbiles.github.io/crystal-collector/" target="_blank"><img src="./assets/images/crytsal-collector.PNG"></a>
           </div>
           <div class="carousel-item">
-            <a href="https://dbiles.github.io/trivia-game/" target="_blank"><img src="./assets/images/trivia_game.png"
-                alt="First slide"></a>
+            <a href="https://dbiles.github.io/trivia-game/" target="_blank"><img src="./assets/images/trivia_game.png"></a>
           </div>
           <div class="carousel-item">
-            <a href="https://dbiles.github.io/giftastic/" target="_blank"><img src="./assets/images/giphyapi.png" alt="First slide"></a>
+            <a href="https://dbiles.github.io/giftastic/" target="_blank"><img src="./assets/images/giphyapi.png"></a>
+          </div>
+          <div class="carousel-item">
+            <a href="https://dbiles.github.io/trainschedule/" target="_blank"><img src="./assets/images/trainscheduler.PNG"></a>
           </div>
           <small><i>Click to vist the project </i></small>
         </div>
