--- a/index2.html
+++ b/index2.html
@@ -27,10 +27,10 @@
                     <a href="#" class="brand-logo">Darron Biles</a>
                     <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
                     <ul class="right hide-on-med-and-down">
-                        <li><a href="#"><i class='material-icons'>home</i></a></li>
-                        <li><a href="#"><i class="material-icons">code</i></a></li>
-                        <li><a href="#"><i class="material-icons">folder</i></a></li>
-                        <li><a href="#"><i class="material-icons">inbox</i></a></li>
+                        <li><a href="#home"><i class='material-icons'>home</i></a></li>
+                        <li><a href="#skills"><i class="material-icons">code</i></a></li>
+                        <li><a href="#portfolio"><i class="material-icons">folder</i></a></li>
+                        <li><a href="#contact"><i class="material-icons">inbox</i></a></li>
                     </ul>
 
                     <!-- Mobile Menu -->
@@ -47,10 +47,10 @@
                                 <a href="#!email"><span class="white-text email">darron.biles@gmail.com</span></a>
                             </div>
                         </li>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Code</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#skills">Code</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -62,7 +62,7 @@
         <!-- About -->
         <div class="container">
             <div class="row about">
-                <div class="col s12 center-align object">
+                <div class="col s12 center-align object" id="home">
                     <h1>Darron Biles</h1>
                     <h5>Full Stack Engineer . Thinker . Solutionist</h5>
                     <p><span class="reserved">let</span></span> <span class='object-item'>darronBiles</span> = <span
@@ -79,7 +79,7 @@
         <!-- Skills -->
         <div class="container">
             <div class="row">
-                <div class="col s12 center-align skills">
+                <div class="col s12 center-align skills" id="skills">
                     <h1><i class="material-icons header-icon">code</i></h1>
                     <h2>Skills</h2>
 
@@ -107,43 +107,49 @@
         <!-- Portfolio -->
         <div class="container">
             <div class="row">
-                <div class="s12 center-align portfolio">
+                <div class="s12 center-align portfolio" id="portfolio">
                     <h1><i class="material-icons header-icon">folder</i></h1>
                     <h2>Portfolio</h2>
                     <div class="carousel carousel-slider center z-depth-2" data-indicators="true">
                         <div class="carousel-item white-text" id="first-panel" href="#one!">
-                            <a href="#">
+                            <a href="https://dbiles.github.io/trainschedule/">
                                 <div class="carousel-fixed-item center">
-                                    <h2>Train Scheduler</h2>
-                                    <p>Simple Train Scheduling App using Firebase for real-time updates</p>
                                 </div>
                             </a>
                         </div>
                         <div class="carousel-item white-text" id="second-panel" href="#one!">
-                            <a href="#">
+                            <a href="https://dbiles.github.io/crystal-collector/">
                                 <div class="carousel-fixed-item center">
-                                    <h2>Crystal Collector</h2>
-                                    <p>Simple Game that asks users to reach a target score by clicking different crystals</p>
                                 </div>
                             </a>
                         </div>
                         <div class="carousel-item white-text" id="third-panel" href="#one!">
-                            <a href="#">
+                            <a href="https://gtbc-juggernaunts.github.io/Trivia-Royale/">
                                 <div class="carousel-fixed-item center">
-                                    <h2>First Panel</h2>
-                                    <p>This is your first panel</p>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="carousel-item white-text" id="fourth-panel" href="#one!">
-                            <a href="#">
-                                <div class="carousel-fixed-item center">
-                                    <h2>First Panel</h2>
-                                    <p>This is your first panel</p>
                                 </div>
                             </a>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <hr />
+
+        <!-- Contact -->
+        <div class="container">
+            <div class="row center-align">
+                <div class="s12 center-align contact" id="contact">
+                    <h1><i class="material-icons header-icon">inbox</i></h1>
+                    <h2>Contact</h2>
+                </div>
+                <div class="col s4">
+                    Github
+                </div>
+                <div class="col s4">
+                    LinkedIn
+                </div>
+                <div class="col s4">
+                    Resume
                 </div>
             </div>
         </div>
@@ -164,9 +170,8 @@
             </div>
         </div>
         <div class="footer-copyright">
-            <div class="container">
+            <div class="container center-align">
                 © 2018 Copyright
-                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
             </div>
         </div>
     </footer>
