--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <div class="col s12 m6">
                             <div class="card small">
                                 <div class="card-image">
-                                        <a href=""><img src="./assets/images/hangmandemo.gif"></a>
+                                        <a href="https://dbiles.github.io/node-guess-game/"><img src="./assets/images/hangmandemo.gif"></a>
                                 </div>
                                 <div class="card-content">
                                     <p>Essentially Hangman. User gets a few more tries to try and answer correctly. Game will present a menu to players to continue playing or exit the game as well.</p>
@@ -140,12 +140,10 @@
                         <div class="col s12 m6">
                             <div class="card small">
                                 <div class="card-image">
-                                    <a href=""><img src="https://via.placeholder.com/75"></a>
-                                    <span class="card-title">Card Title</span>
+                                    <a href=""><img src="./assets/images/giphy_demo.gif"></a>
                                 </div>
                                 <div class="card-content">
-                                    <p>I am a very simple card. I am good at containing small bits of information. I am
-                                        convenient because I require little markup to use effectively.</p>
+                                    <p>A jquery project that searches GIPHY API and returns randoms gifs based on selected term. Can even add other keywords to return different GIFs.</p>
                                 </div>
                             </div>
                         </div>
