--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <div class="col s12 m6">
                             <div class="card small">
                                 <div class="card-image">
-                                    <a href=""><img src="./assets/images/giphy_demo.gif"></a>
+                                    <a href="https://dbiles.github.io/giftastic/"><img src="./assets/images/giphy_demo.gif"></a>
                                 </div>
                                 <div class="card-content">
                                     <p>A jquery project that searches GIPHY API and returns randoms gifs based on selected term. Can even add other keywords to return different GIFs.</p>
@@ -150,12 +150,10 @@
                         <div class="col s12 m6">
                             <div class="card small">
                                 <div class="card-image">
-                                        <a href=""><img src="https://via.placeholder.com/75"></a>
-                                    <span class="card-title">Card Title</span>
+                                        <a href="http://ec2-3-17-56-163.us-east-2.compute.amazonaws.com:3000/"><img src="./assets/images/current.gif"></a>
                                 </div>
                                 <div class="card-content">
-                                    <p>I am a very simple card. I am good at containing small bits of information.
-                                        I am convenient because I require little markup to use effectively.</p>
+                                    <p>A MVC project that simulates a property management app allowing landlords and tenants to coexist in one portal deployed to AWS.</p>
                                 </div>
                             </div>
                         </div>
